# ChangeLog for games-emulation/gnome-video-arcade
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  07 Apr 2008; Michał Ziąbkowski <mziab@o2.pl>
  +gnome-video-arcade-0.5.6.ebuild:
  Readded keywords.

  07 Apr 2008; Michał Ziąbkowski <mziab@o2.pl>
  +gnome-video-arcade-0.5.6.ebuild:
  Initial ebuild.
