@@ -1,3 +1,5 @@
 DIST gnome-video-arcade-0.5.6.tar.gz 962286 RMD160 995bcd006994d5e827a107987ee60927ad334e4c SHA1 b53ec7bf2142ebfbee7f97510c1235aaa7276a49 SHA256 b59633fa15d66fce8724fceefc2c45bb2597a3d42b10ce73c6759cd112a12c00
+DIST gnome-video-arcade-0.6.0.tar.gz 979940 RMD160 c9f1828cf49f411daad1be2283c175b11e700b8c SHA1 a52f455b374c41f69ceb50e1b90dd60ec8995de6 SHA256 c169df5fca646d7237058131322e65a517d7c8adb0d81494238022858504af41
 EBUILD gnome-video-arcade-0.5.6.ebuild 1178 RMD160 284212c836f1d03a7f69ceebb6f5f8db561b391c SHA1 4a4482fe5e48370617bbed1c03e79dd4b8a9e03f SHA256 246dbc13720b292b090725e7135e2dc0d650583860af0606ecf59cccac244e20
-MISC ChangeLog 345 RMD160 65b7e7aced7951cc74e2ecf2110d4cda4f05b796 SHA1 ca5c724ef06123ca9ae013ade45c13fe47c4093e SHA256 afedd004587375f3c0ce70ce6d39314edb6498ee48ab1be7527e416b6a73335a
+EBUILD gnome-video-arcade-0.6.0.ebuild 1178 RMD160 f56422398cc8a3cec0433c249b828fe69f69ccfa SHA1 258eb390eb5cf238548ae85737c071a339c41a57 SHA256 3b6a0ad47fe568c5e758b4c09de04bd37a92b62d572a1dde60034b3c44cddc11
+MISC ChangeLog 441 RMD160 25c2a6993865af92581faa9571372aba07f83cdf SHA1 4d7f7272c7bc9caa636eba88207ae21c99b9f199 SHA256 fafa44257f07e035fb9c66adf6d6f7e6897c7e7dce56d49f4bb7394ba52f900a
